tests/NormalTests/paczka1/small_fuzzy/68294498.err
Error in line 1: BJWCNDpc A762 5,4
Error in line 11: HarLHryJk S211 13,99
